kubernetes/ingress/ingress-backup.in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kompassi-backup
  annotations: !Var base_ingress_annotations
spec:
  ingressClassName: !Var ingress_class_name
  tls:
    - secretName: ingress-backup
      hosts: !Var backup_ingress_public_hostnames
  rules: !Loop
    over: !Var backup_ingress_public_hostnames
    as: hostname
    template:
      host: !Var hostname
      http:
        paths:
          - pathType: Prefix
            path: /static
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - pathType: Prefix
            path: /media
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kompassi
                port:
                  number: 8000
